# quickstart

./: .env.example  README.md  pyproject.toml  training_state.json
src/quickstart/: common.py  create_modal_secret.py  localnet.py  scorer.py  scoring_client.py  scoring_server.py  settle_targets.py  stake.py  status.py  submitter.py  submitter_best_model.py  train_flax.py  train_torch.py  training.py
tests/: test_common.py
