[project]
name = "quickstart"
version = "0.1.0"
description = "Soma scoring quickstart — run GPU scoring on Modal"
readme = "README.md"
requires-python = ">=3.13"
# ML packages (soma-models, torch, jax, etc.) are installed inside Modal
# containers via modal.Image.pip_install(), not locally.
dependencies = [
    "aiohttp>=3.11",
    "modal>=1.3.4",
    "soma-sdk>=0.1.7",
    "python-dotenv>=1.1",
    "boto3>=1.35",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
claim = "quickstart.settle_targets:main"
submit = "quickstart.submitter:trigger"
create-secrets = "quickstart.create_modal_secret:main"
